array.island.Island.scala.error
Erreur de compilation :
Island:11: error: not found: value head
        else if (num(i) == head(L)-1) {
                           ^Island:13: error: not found: value tail
          L=tail(L)
            ^Island:6: error: type mismatch;
 found   : Unit
 required: Int
    for (i <- 0 to (n-1)) {
           ^